--- a/ElectronsFlaskTest/package.json
+++ b/ElectronsFlaskTest/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^2.0.8"
+  },
+  "dependencies": {
+    "interactjs": "^1.3.4"
   }
 }
