--- a/ElectronsFlaskTest/package.json
+++ b/ElectronsFlaskTest/package.json
@@ -12,6 +12,7 @@
     "electron": "^2.0.8"
   },
   "dependencies": {
-    "interactjs": "^1.3.4"
+    "interactjs": "^1.3.4",
+    "orgchart": "^2.1.2"
   }
 }
